# voxlap-orig-refactored

./: CMakeLists.txt  README.md  cleanall.bat  makestuf.bat  msvc_build.bat  msvc_build_all.bat  nmake.mak  readme.txt  tidy.bat
binaries/modules/Release/: stdout.txt  voxlap5_lib.lib
include/: CMakeLists.txt  cpu_detect.h  glInfo.h  kfalling.h  kfile_io.h  kfonts.h  kglobals.h  kmodelling.h  kplib.h  ksnippits.h  ksound.h  ktimer.h  porthacks.h  sysmain.h  voxlap5.h  voxlap5.h.in
libraries/: SDL.lib  SDLmain.lib  gle.lib  glsmap.lib  glut32.lib  mui.lib
source/: CMakeDetermineASMCompiler.cmake  CMakeDetermineMASMDialect.cmake  CMakeLists.txt  FindDirectInput.cmake  cpu_detect.cpp  game.cpp  kwalk.cpp  sdlmain.cpp  simple.cpp  slab6.cpp  vector_test.cpp  voxed.cpp  winmain.cpp
source/apps/: CMakeLists.txt  Copy of CMakeLists.txt
source/modules/: CMakeLists.txt  cpu_detect.cpp  kfalling.cpp  kfile_io.cpp  kmodelling.cpp  kphysics.cpp  kplib.cpp  kscreen.cpp  s6.masm  s6.nasm  v5.asm  v5.asm.in  v5.masm  v5.nasm  voxlap5.cpp
